commit fixing buttons

--- a/Hello.html
+++ b/Hello.html
@@ -20,7 +20,7 @@
           <!--My Custom Javascript called from an external file called: customjs -->
         <script type="text/javascript" src="customjs.js"></script>
          
-         <!-- JQuery Link -->
+         <!-- JQuery Link (CDN link of jQuery ) -->
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
          
           <!-- Tittle of the page-->
@@ -41,7 +41,8 @@
   <section class="section-img m-2 padding">
     <!-- button-->
       <div id = "btn-img" class="container-fluid padding">
-        <button id="button-greet" onclick="greetingMsg()" type="subit" clickable="true">Click Here</button>   
+        <button id="button-greet" onclick="greetingMsg()" type="subit" clickable="true">Click Here</button> 
+         <button id="button-hide-greet" onclick="greetingMsg()" type="subit" clickable="true"><span class="label label-primary"><i class="fa-solid fa-xmark-large"></i></span>Close</button>  
       </div> <!--end_div--> 
 
     <br />
