pwa fixed commit on master

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <!-- <H1 id="hello-page" style = "text-align:center ; font-size: 30px; font-weight: bold; color: #8E44AD ">Greetings & Good Tidings</H1> --> 
               
               <!--carousel-->
-        <section class="carousel-section  mx-auto padding">    
+        <section class="carousel-section mx-auto padding">    
           <div class="container-fluid mx-auto padding">
             <div id="carouselDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
               <div class="carousel-indicators">
@@ -73,7 +73,7 @@
                   <img  id="img1" class="d-block img-fluid rounded padding"  src="img/valenciaartsandsciences.jpg" alt="city">
                   <div class="carousel-caption d-none d-md-block"> 
                     <!--card-div-->
-                    <div class="card-fluid rounded text-bg-primary mb-3 mx-auto padding" style="max-width: 28rem;">
+                    <div id="cardimg" class="card-fluid rounded text-bg-primary mx-auto mb-3 padding" style="max-width: 28rem; height: 30px;">
                       <div class="card-header">City of Arts & Sciences</div>
                       <div class="card-body">
                         <p class="card-text">View of Valencia's City of Arts & Sciences, Spain.</p>
@@ -83,10 +83,10 @@
                 </div>   
 
                 <div class="carousel-item" data-bs-interval="2000">
-                  <img id="img2"  class="d-block img-fluid rounded"  src="img/sydneyOperahouse.jpg" alt="city">
-                  <div class="carousel-caption d-none d-md-block text-white">
+                  <img id="img2" class="d-block img-fluid rounded"  src="img/sydneyOperahouse.jpg" alt="city">
+                  <div class="carousel-caption d-none d-md-block">
                     <!--card-div-->
-                    <div class="card-fluid rounded text-bg-light mb-3 mx-auto padding" style="max-width: 28rem;">
+                    <div id="cardimg" class="card-fluid rounded text-bg-light mx-auto mb-3 padding" style="max-width: 28rem; height: 30px;">
                       <div class="card-header">Sydney Opera House</div>
                       <div class="card-body">
                         <p class="card-text">Night View of Sydney's Opera House, Australia.</p>
@@ -96,10 +96,10 @@
                 </div>
 
                 <div class="carousel-item">
-                  <img id="img3" class="d-block img-fluid rounded" src="img/burjkhalifa.jpg" alt="city" >
+                  <img  id="img3" class="d-block img-fluid rounded" src="img/burjkhalifa.jpg" alt="city" >
                   <div class="carousel-caption d-none d-md-block">
                   <!--card-div-->
-                    <div class="card-fluid mb-3 mx-auto padding rounded text-bg-info" style="max-width: 28rem;">
+                    <div id="cardimg" class="card-fluid rounded text-bg-info mx-auto mb-3 padding" style="max-width: 28rem; height: 30px;">
                       <div class="card-header">Burj Khalifa</div>
                       <div class="card-body">
                         <p class="card-text">View of The Burj Khalifa in Dubai, UAE.</p>
